=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.95

   * fixed bug with raytracing transparent surfaces using 
     intermediate backgrounds

   * surface code now tolerates superimposed identical atoms more gracefully

   * dot_normals setting

   * bound_to selection operator now complements neighbor...

   * fixed stereo opengl bug & improved opengl debugging capability

   * extended editor to support multiple picked atoms in different objects

   * fixed major bug in mesh representation

   * updated setup.py

   * surface_type setting:  0 = solid, 1 = dot, 2 = mesh

   * fixed off-center behavior of center command with respect to clipping planes

   * fixed label representation memory (on/off only) in scenes

   * added support for explicit RESN and RESI specification in selection 
     macros: RESN`RESI/, RESN`/, `RESI/ vs semi-ambiguous RESN/ or RESI/

   * fixed nonbonded detection problem with discrete objects

   * fixed serious bug with "state" selection operator and discrete objects.

   * improved ray-tracer's ability to handle multiple transparent objects

   * "Virtual trackball" toggle now in menu

   * added variety of new functionality to pop-up menus

   * fixed segmentation fault bug in atom picking (only seen on Mac?)

   * much-improved support for raytracing of large structures;
     various bugs fixed

   * fixed memory management issues on OS-X

   * endianness check for .phi files 

   * test cases updated to reflect new molecular editing behavior

   * default arguments (and behavior) changed for dist and bond commands

   * pdb_standard_order now default on

   * textual button mode indicator, more button changes...

   * ray-tracing of RGBA pixmap text now supported FINALLY.

   * pk1-4 now have different visual representations...

   * fixed hydrogen adding for amides/ureas
